--- a/kontakt.html
+++ b/kontakt.html
@@ -45,7 +45,7 @@
       <div class="column middle">
         <h2>Kontakt</h2>
         <div class="contact-form">
-                <form id="contact-form" method="POST" action="action_page.php">
+                <form id="contact-form">
         
                   <label for="name">Namn</label>
                   <input type="text" id="name" name="name" placeholder="Fyll i ditt namn här...">
