--- a/kontakt.html
+++ b/kontakt.html
@@ -16,7 +16,7 @@
 
    <div class="topnav">
     <a href="index.html">Hem</a>
-    <a href="kontakt.html">Kontakt</a>
+    <a href="kontakt.html">Kontakt (funkar inte för tillfället)</a>
    </div>
 
     <article class="hero-lighting">
