--- a/kontakt.html
+++ b/kontakt.html
@@ -16,7 +16,7 @@
 
    <div class="topnav">
     <a href="index.html">Hem</a>
-    <a href="kontakt.html">Kontakt (funkar inte för tillfället)</a>
+    <a href="kontakt.html">Kontakt</a>
    </div>
 
     <article class="hero-lighting">
@@ -43,7 +43,7 @@
       </div>
       
       <div class="column middle">
-        <h2>Kontakt</h2>
+        <h2>Kontakt (funkar inte för tillfället)</h2>
         <div class="contact-form">
                 <form id="contact-form">
         
