--- a/kontakt.html
+++ b/kontakt.html
@@ -44,6 +44,7 @@
       
       <div class="column middle">
         <h2>Kontakt (funkar inte för tillfället)</h2>
+        <h5>Kontakta oss gärna via abbonair@gmail.com</h5>
         <div class="contact-form">
                 <form id="contact-form">
         
